dnl Process this file with autoconf to produce a configure script.
AC_INIT(README.mdst)

VERSION=1.0
AC_SUBST(VERSION)
PACKAGE=mdst
AC_SUBST(PACKAGE)

BELLE_CONFIG_DIR=${BELLE_CONFIG_DIR:=/belle/pro/src/config}
AC_SUBST(BELLE_CONFIG_DIR)
RELATIVE_TOP_DIR=../../..
AC_SUBST(RELATIVE_TOP_DIR)
BELLE_ROUTE=src/anal/mdst/
AC_SUBST(BELLE_ROUTE)

TMPPWD=`( cd $srcdir ; pwd )`
CONFIG_MAKEFILES="`( cd $srcdir/..; $TMPPWD/$RELATIVE_TOP_DIR/config/configdirs -s )`"
AC_OUTPUT($CONFIG_MAKEFILES $EXTRA_CONFIG_MAKEFILES)

