dnl Process this file with autoconf to produce a configure script.
AC_INIT(qqlist.pl.in)

VERSION=1.0
AC_SUBST(VERSION)
PACKAGE=particle
AC_SUBST(PACKAGE)

BELLE_CONFIG_DIR=${BELLE_CONFIG_DIR:=/belle/pro/src/config}
AC_SUBST(BELLE_CONFIG_DIR)
RELATIVE_TOP_DIR=../../..
AC_SUBST(RELATIVE_TOP_DIR)
BELLE_ROUTE=src/anal/particle/
AC_SUBST(BELLE_ROUTE)

dnl
dnl ----- Process this file with autoconf to produce a configure script -----
dnl
AC_CONFIG_FILES(../script/qqlist.pl:qqlist.pl.in)
AC_PATH_PROG(PERL,perl,perl)
dnl AC_CONFIG_COMMANDS_POST(sed 1D qqlist.tmp > ../script/qqlist;rm qqlist.tmp)


TMPPWD=`( cd $srcdir ; pwd )`
CONFIG_MAKEFILES="`( cd $srcdir/..; $TMPPWD/$RELATIVE_TOP_DIR/config/configdirs -s )`"
AC_OUTPUT($CONFIG_MAKEFILES $EXTRA_CONFIG_MAKEFILES)

